syntax = "proto2";

package match;

option java_package = "com.oneroadtrip.matcher.proto";
option java_multiple_files = true;

enum Status {
  SUCCESS = 0;
  INCORRECT_REQUEST = 1;
  INCORRECT_PASSWORD = 2;
  INCORRECT_USER_NAME = 3;
  UNKNOWN_USER = 4;
  NO_DB_CONNECTION = 5;
  ERROR_IN_SQL = 6;
  SERVER_ERROR = 7;
  NO_TOKEN = 8;
  MULTIPLE_VALID_TOKEN = 9;
  ERROR_IN_GUIDE_PLAN = 11;
  ERR_LOAD_GUIDE_TO_RESERVED_DAYS = 12;
  ERR_INSERT_GUIDE_RESERVATION = 13;
  INCORRECT_GUIDE_ID = 14;
  INCORRECT_SPOT_ID = 15;

  // Internal status
  //
  // 所谓internal error就是不在request handler中处置的状态，
  // 碰到这种状态我们经常还需要继续我们的逻辑。这些状态主要提供给
  // OneRoadTripException使用。
  GUIDE_NOT_FOUND = 10001;
}

message CityInfo {
  optional int64 city_id = 1;
  optional string name = 2;
  optional string cn_name = 3;
  optional int32 suggest = 4;
  optional int32 min = 5;
  repeated string alias = 6;
}

message SpotInfo {
  optional int64 spot_id = 1;
  optional int64 city_id = 2;
  optional string name = 3;
  optional string cn_name = 4;
  optional string description = 5;
  optional float hours = 6;
  optional float score = 7;
  repeated string topics = 8;
}

message GuideInfo {
  optional int64 guide_id = 1;
  optional string name = 2;
  optional string description = 3;
  optional int32 max_people = 4;
  optional bool has_car = 5;
  optional float score = 6;
  repeated string topic = 7;
  optional int64 phone = 8;

  // 导游可以覆盖城市信息
  repeated CityInfo cover_city = 9;
}

enum GuidePlanErrorInfo {
  // No suitable guide can be found.
  NOT_FOUND = 1;
}

message VisitCity {
  optional CityInfo city = 1;
  optional int32 num_days = 2;
  // suggest_rate用来描述这个城市有多大的旅游价值，是一个0..1之间的数，1是必须要去的城市，
  // 即请求中填的出发、到达和途径城市，其它城市是按路线由后端推荐的。
  optional float suggest_rate = 3;

  // 所有需要用到city的请求，最终请一致用这个结构。
  optional int32 start_date = 4;
  optional GuidePlanErrorInfo error_info = 5;
  repeated GuideInfo guide = 6;
  repeated int64 excluded_guide_id = 7;
}

enum TransportationType {
  SHUTTLE = 1;
  PLANE = 2;
  WALK = 3;
  CAR = 4;
  PUBLIC_TRANSIT = 5;
  OTHERS = 6;
}

message Edge {
  optional CityInfo from_city = 1;
  optional CityInfo to_city = 2;
  optional int32 distance = 3;
  optional int32 hours = 4;
  optional TransportationType transportation_type = 5 [ default = SHUTTLE ];
}
